# ReOdyssey

./: .gitignore  .gitmodules  CMakeLists.txt  reodyssey_config.toml  reodyssey_manifest.toml
cmake/: EmbedBinaryHeader.cmake
src/: main.cpp  patches.cpp  reodyssey_app.h
src/input/: mouse_support.cpp  reodyssey_mnk_input.cpp  reodyssey_mnk_input.h
src/misc/: math.cpp
src/render/: d3d_hooks.cpp  d3d_resource_hooks.cpp  guest_device.h  guest_heap.h  guest_resources.h  pipeline.cpp  render_internal.h  render_patches.cpp  render_state.cpp  render_state.h  video.cpp  video.h
src/render/shaders/: copy_ps.hlsl  copy_vs.hlsl
